tests/baselines/reference/parserMemberAccessorDeclaration6(strict=true).errors.txt
parserMemberAccessorDeclaration6.ts(2,7): error TS7032: Property '0' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserMemberAccessorDeclaration6.ts(2,9): error TS7006: Parameter 'i' implicitly has an 'any' type.


==== parserMemberAccessorDeclaration6.ts (2 errors) ====
    class C {
      set 0(i) { }
          ~
!!! error TS7032: Property '0' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
            ~
!!! error TS7006: Parameter 'i' implicitly has an 'any' type.
    }